--- a/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -12,12 +12,15 @@
     <script type="text/javascript" src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="../plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
-    <!--添加品牌js-->
+    <!-- 分页组件开始 -->
+    <script src="../plugins/angularjs/pagination.js"></script>
+    <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
+    <!-- 分页组件结束 -->
+    <!--品牌相关js-->
     <script type="text/javascript" src="../js/pages/brand.js"></script>
 
 </head>
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController"
-      ng-init="findAll()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController">
 <!-- .box-body -->
 <div class="box-header with-border">
     <h3 class="box-title">品牌管理</h3>
@@ -33,9 +36,11 @@
             <div class="form-group form-inline">
                 <div class="btn-group">
                     <button type="button" class="btn btn-default" title="新建" data-toggle="modal"
-                            data-target="#editModal"><i class="fa fa-file-o"></i> 新建
+                            data-target="#editModal" ng-click="entity={}"><i class="fa fa-file-o"></i> 新建
                     </button>
-                    <button type="button" class="btn btn-default" title="删除"><i class="fa fa-trash-o"></i> 删除</button>
+                    <button type="button" class="btn btn-default" title="删除" ng-click="delete()"><i
+                            class="fa fa-trash-o"></i> 删除
+                    </button>
                     <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i
                             class="fa fa-refresh"></i> 刷新
                     </button>
@@ -44,7 +49,11 @@
         </div>
         <div class="box-tools pull-right">
             <div class="has-feedback">
-
+                <div class="has-feedback">
+                    品牌名称:&nbsp;<input ng-model="searchEntity.name"> 品牌首字母:&nbsp;<input
+                        ng-model="searchEntity.firstChar">
+                    <button class="btn btn-default" ng-click="reloadList()">查询</button>
+                </div>
             </div>
         </div>
         <!--工具栏/-->
@@ -54,7 +63,8 @@
             <thead>
             <tr>
                 <th class="" style="padding-right:0px">
-                    <input id="selall" type="checkbox" class="icheckbox_square-blue">
+                    <input id="selall" type="checkbox" class="icheckbox_square-blue" ng-checked="checks"
+                           ng-click="checks = !checks;selectAll(checks)">&nbsp;&nbsp;全选
                 </th>
                 <th class="sorting_asc">品牌ID</th>
                 <th class="sorting">品牌名称</th>
@@ -64,19 +74,20 @@
             </thead>
             <tbody>
             <tr ng-repeat="entity in list">
-                <td><input type="checkbox"></td>
+                <td><input type="checkbox" ng-click="updateSelection($event,entity.id)"></td>
                 <td>{{entity.id}}</td>
                 <td>{{entity.name}}</td>
                 <td>{{entity.firstChar}}</td>
                 <td class="text-center">
-                    <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改
+                    <button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal"
+                            ng-click="findOneBrand(entity.id)">修改
                     </button>
                 </td>
             </tr>
             </tbody>
         </table>
         <!--数据列表/-->
-
+        <tm-pagination conf="paginationConf"></tm-pagination>
     </div>
     <!-- 数据表格 /-->
 
@@ -96,16 +107,17 @@
                 <table class="table table-bordered table-striped" width="800px">
                     <tr>
                         <td>品牌名称</td>
-                        <td><input class="form-control" placeholder="品牌名称"></td>
+                        <td><input class="form-control" placeholder="品牌名称" ng-model="entity.name"></td>
                     </tr>
                     <tr>
                         <td>首字母</td>
-                        <td><input class="form-control" placeholder="首字母"></td>
+                        <td><input class="form-control" placeholder="首字母" ng-pattern="/[a-zA-Z]/"
+                                   ng-model="entity.firstChar" ng-change="checkText()"></td>
                     </tr>
                 </table>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+                <button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
                 <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
