--- a/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -17,7 +17,11 @@
     <link rel="stylesheet" href="../plugins/angularjs/pagination.css">
     <!-- 分页组件结束 -->
     <!--品牌相关js-->
-    <script type="text/javascript" src="../js/pages/brand.js"></script>
+    <!--<script type="text/javascript" src="../js/pages/brand.js"></script>-->
+    <script type="text/javascript" src="../js/base_pagination.js"></script>
+    <script type="text/javascript" src="../js/service/brandService.js"></script>
+    <script type="text/javascript" src="../js/controller/baseController.js"></script>
+    <script type="text/javascript" src="../js/controller/brandController.js"></script>
 
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController">
