--- a/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/index.html
+++ b/pinyougou-parent/pinyougou-manager-web/src/main/webapp/admin/index.html
@@ -279,7 +279,7 @@
                                 <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                                 <p>
-                                    测试用户
+                                    {{loginName}}
                                     <small>最后登录 11:20AM</small>
                                 </p>
                             </li>
@@ -312,7 +312,7 @@
                     <img src="../img/user2-160x160.jpg" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p> 测试用户</p>
+                    <p> {{loginName}}</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                 </div>
             </div>
@@ -336,12 +336,12 @@
                     </a>
                     <ul class="treeview-menu">
 
-                        <li id="admin-login">
+                        <li>
                             <a href="seller_1.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>商家审核
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="seller.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>商家管理
                             </a>
@@ -358,27 +358,27 @@
                     </a>
                     <ul class="treeview-menu">
 
-                        <li id="admin-login">
+                        <li>
                             <a href="brand.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>品牌管理
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="specification.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>规格管理
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="type_template.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>模板管理
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="item_cat.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>分类管理
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="goods.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>商品审核
                             </a>
@@ -396,12 +396,12 @@
                     </a>
                     <ul class="treeview-menu">
 
-                        <li id="admin-login">
+                        <li>
                             <a href="content_category.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>广告类型管理
                             </a>
                         </li>
-                        <li id="admin-login">
+                        <li>
                             <a href="content.html" target="iframe">
                                 <i class="fa fa-circle-o"></i>广告管理
                             </a>
