--- a/pinyougou-parent/pinyougou-shop-web/src/main/webapp/admin/cooperation.html
+++ b/pinyougou-parent/pinyougou-shop-web/src/main/webapp/admin/cooperation.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 	<title>品优购-招商合作</title>
-	 <link rel="icon" href="assets/img/favicon.ico">
+	<link rel="icon" href="../img/assets/img/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="../css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="../css/pages-cooperation.css" />
@@ -121,7 +121,7 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="../js/plugins/jquery/jquery.min.js"></script>
 <script type="text/javascript">
 $(function(){
 	$("#service").hover(function(){
@@ -137,8 +137,8 @@ $(function(){
 
 })
 </script>
-<script type="text/javascript" src="js/plugins/jquery.easing/jquery.easing.min.js"></script>
-<script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
+<script type="text/javascript" src="../js/plugins/jquery.easing/jquery.easing.min.js"></script>
+<script type="text/javascript" src="../js/plugins/sui/sui.min.js"></script>
 </body>
         <!--供应商-->
         <div class="banner">        
